# pack-checker

./: .codespellrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  jsonc.py  pack_checker.py  pyproject.toml  requirements.txt  requirements_ci.txt  requirements_exe.txt  ziputil.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  codespell.yaml  release.yaml
pack_checker/: __init__.py  __main__.py  checker.py  cli.py  collect.py  datachecks.py  imgutil.py  warnings.py  ziputil.py
tests/checker/: test_validate_json.py
tests/collect/: test_identify_json.py
tests/datachecks/: test_check_refs.py
tests/datachecks/pack-data/: locations.json  manifest.json
