[project]
name = "pack-checker"
description = "PopTracker pack check tool"
version = "1.5.0"  # would require build tool to make dynamic
requires-python = ">= 3.8"
dependencies = [
  "jsonschema>=4.20.0",
  "referencing",
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
cli = [
  "certifi",
]
lint = [
  "types-jsonschema>=4.20.0.20240105",
  "certifi",
]

[project.urls]
Repository = "https://github.com/PopTracker/pack-checker.git"
Issues = "https://github.com/PopTracker/pack-checker/issues"

[project.scripts]
pack-checker = "pack_checker.cli:main"
