[project]
name = "pack-checker"
description = "PopTracker pack check tool"
version = "1.6.0"  # would require build tool to make dynamic
requires-python = ">= 3.8"
dependencies = [
  "jsonschema>=4.20.0",
  "referencing",
]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
cli = [
  "certifi",
]
lint = [
  "types-jsonschema>=4.20.0.20240105",
  "certifi>=2026.2.25",
  "mypy==1.19.1",
  "flake8==7.3.0",
  "bandit==1.9.4",
  "flake8-bandit==4.1.1",
  "flake8-pyproject==1.2.4",
  "black==26.3.1",
]

[project.urls]
Repository = "https://github.com/PopTracker/pack-checker.git"
Issues = "https://github.com/PopTracker/pack-checker/issues"

[project.scripts]
pack-checker = "pack_checker.cli:main"

[tool.black]
line-length = 120

[tool.flake8]
doctests = true
max-line-length = 120
max-complexity = 46  # TODO: get this down to ~15 by replacing cli.check() with a class
extend-ignore = "E2,E3"  # may be incompatible to black, but also we use black anyway

[tool.ruff]
line-length = 120
